--- a/raytracing/Cargo.toml
+++ b/raytracing/Cargo.toml
@@ -10,6 +10,7 @@ bytemuck = { version = "1.12.1", features = ["derive"] }
 env_logger = "0.9.1"
 glam = "0.21.3"
 image = "0.24.4"
+lazy_static = "1.4.0"
 log = "0.4.17"
 rand = "0.8.5"
 rayon = "1.5.3"
