Add BVH acceleration structure (x1000 speedup for bunny)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -75,7 +75,17 @@
                     "kind": "bin"
                 }
             },
-            "args": [],
+            "args": [
+                "-o",
+                "tev",
+                "--spp",
+                "1",
+                "--integrator",
+                "basic",
+                "--scene",
+                "debug",
+                "--no-threads"
+            ],
             "cwd": "${workspaceFolder}"
         },
         {
