--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = { version = "1.0.65", features = ["backtrace"] }
+bytemuck = "1.12.1"
+egui = "0.19.0"
+egui_winit_vulkano = "0.20.0"
 env_logger = "0.9.0"
 glam = "0.21.3"
 image = "0.24.3"
+itertools = "0.10.5"
 log = "0.4.17"
 rand = "0.8.5"
 rayon = "1.5.3"
+vulkano = { git="https://github.com/vulkano-rs/vulkano" }
+vulkano-shaders = { git="https://github.com/vulkano-rs/vulkano" }
+vulkano-win = { git="https://github.com/vulkano-rs/vulkano" }
+winit = "0.27.3"
+
+
+[[bin]]
+name = "realtime"
+
+[lib]
