Add a kind of adaptative sampling. It sucks bc it slows downs computations for the moment, but it's a first step

--- a/raytracing/Cargo.toml
+++ b/raytracing/Cargo.toml
@@ -17,8 +17,9 @@ rayon = "1.5.3"
 tobj = "3.2.3"
 
 [features]
-default = []
+default = ["debug_light"]
 # default = ["debug"]
 debug = ["counter", "counter_time"]
+debug_light = ["counter"]
 counter_time = []
 counter = []
