Start a CLI to run them all

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["viewer", "raytracing", "simple-runner", "tev-client"]
+members = ["viewer", "raytracing", "simple-runner", "cli"]
