--- a/tev-client/Cargo.toml
+++ b/tev-client/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
-name = "raytracing"
+name = "tev-client"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytemuck = { version = "1.12.1", features = ["derive"] }
+anyhow = "1.0.66"
+bytemuck = "1.12.1"
+clap = { version = "4.0.18", features = ["derive"] }
 env_logger = "0.9.1"
-glam = "0.21.3"
 image = "0.24.4"
+itertools = "0.10.5"
 log = "0.4.17"
 rand = "0.8.5"
 rayon = "1.5.3"
+raytracing = { path = "../raytracing" }
+tev_client = "0.5.2"
