--- a/viewer/Cargo.toml
+++ b/viewer/Cargo.toml
@@ -14,8 +14,12 @@ itertools = "0.10.5"
 log = "0.4.17"
 rand = "0.8.5"
 rayon = "1.5.3"
-raytracing = {path = "../raytracing"}
-vulkano = { git="https://github.com/vulkano-rs/vulkano" }
-vulkano-shaders = { git="https://github.com/vulkano-rs/vulkano" }
-vulkano-win = { git="https://github.com/vulkano-rs/vulkano" }
+raytracing = { path = "../raytracing" }
+vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
+vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
+vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
 winit = "0.27.4"
+
+[features]
+default = [ "validationlayers" ]
+validationlayers = []
