--- a/crates/rt-cli/Cargo.toml
+++ b/crates/rt-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cli"
+name = "rt-cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,6 +15,6 @@ itertools = "0.10.5"
 log = "0.4.17"
 rand = "0.8.5"
 rayon = "1.5.3"
-raytracing = { path = "../raytracing" }
+rt = { path = "../rt" }
 sdl2 = { version = "0.35.2", features = ["bundled"] }
 tev_client = "0.5.2"
