--- a/crates/rt/Cargo.toml
+++ b/crates/rt/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow.workspace = true
 bytemuck = { version = "1.12.1", features = ["derive"] }
-env_logger = "0.9.1"
+embree4-rs.workspace = true
+embree4-sys.workspace = true
 glam = "0.21.3"
 image = "0.24.4"
 lazy_static = "1.4.0"
