--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,9 @@
 members = ["crates/*"]
 resolver = "2"
 
-[profile.release] 
+[profile.release]
 debug = 2
+
+[workspace.dependencies]
+embree4-rs = { git = "https://github.com/philae-ael/embree4-rs" }
+embree4-sys = "0.0.10"
