--- a/crates/rt/Cargo.toml
+++ b/crates/rt/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 bytemuck = { version = "1.12.1", features = ["derive"] }
-embree4-rs = "0.0.16"
-embree4-sys = "0.0.10"
+embree4-rs.workspace = true
+embree4-sys.workspace = true
 env_logger = "0.9.1"
 glam = "0.21.3"
 image = "0.24.4"
