--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ embree4-rs = { git = "https://github.com/philae-ael/embree4-rs" }
 # embree4-rs = { path = "../embree4-rs/" }
 embree4-sys = "0.0.10"
 anyhow = "1"
+glam = { version = "0.28", features = ["bytemuck"] }
