--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ resolver = "2"
 debug = 2
 
 [workspace.dependencies]
-embree4-rs = { git = "https://github.com/philae-ael/embree4-rs" }
-# embree4-rs = { path = "../embree4-rs/" }
-embree4-sys = "0.0.10"
+# embree4-rs = { git = "https://github.com/philae-ael/embree4-rs" }
+embree4-rs = { path = "../embree4-rs/" }
+# embree4-sys = "0.0.10"
+embree4-sys = { path = "../embree4-sys/" }
 anyhow = "1"
 glam = { version = "0.28", features = ["bytemuck"] }
 bitflags = "2.6"
